upload 홈으로 돌아갈때 이벤트 추가 upload와 register.jsp 만듦

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -270,7 +270,11 @@ a:hover, a:active, a:focus {
   margin-top: 32px;
 }
 
-
+/* 사진 업로드 버튼 */
+button#picture_upload_btn {
+	position: relative;
+    left: 50%;
+}
 
 /*---------------------------------------
    About section              
