--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -67,7 +67,7 @@ html{
 }
 
 a {
-  color: #4d638c;
+  color: #000000;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -177,9 +177,8 @@ a:hover, a:active, a:focus {
 
 .navbar-default {
     background: #ffffff;
-    padding: 18px 0;
+    padding: 55px 0;
     border: none;
-    margin-top: 62px;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
@@ -253,27 +252,68 @@ a:hover, a:active, a:focus {
     background-position: center center;
     display: -webkit-box;
     display: -webkit-flex;
-     display: -ms-flexbox;
+    display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
-     align-items: center;
+    align-items: center;
     position: relative;
     text-align: center;
-    padding-top: 60px;
+    padding-top: 200px;
     padding-bottom: 40px;
 }
 
-#home hr {
-  width: 82px;
-  margin-top: 32px;
+div#home_contents {
+    border-bottom: groove;
+    padding: 60px;
 }
 
 /* 사진 업로드 버튼 */
 button#picture_upload_btn {
-	position: relative;
-    left: 47%;
+    background: white;
+    -webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	-webkit-box-shadow: 0px 1px 3px #666666;
+	-moz-box-shadow: 0px 1px 3px #666666;
+	box-shadow: 0px 1px 3px #666666;
+	font-family: Arial;
+	color: #000000;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #000000 2px;
+	text-decoration: none;
+	-webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+}
+
+button#picture_upload_btn:hover {
+  background: #cef0de;
+  text-decoration: none;
+}
+
+/* 메인 멘트 자간 */
+h2#home_text {
+	letter-spacing: 15px;
+}
+
+/* 메인 서비스 소개 부분 */
+h2.main_introduce {
+	text-align: center;
+}
+
+p.main_introduce {
+	text-align: center;
+}
+
+div#home_contents2 {
+    border-bottom: groove;
+    padding: 60px;
 }
 
 /*---------------------------------------
