회원가입 수정ing

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -316,6 +316,10 @@ div#home_contents2 {
     padding: 60px;
 }
 
+b#home_h {
+    color: green;
+}
+
 /*---------------------------------------
    About section              
 -----------------------------------------*/
