--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -1,231 +1,30 @@
-/* 오버레이 창 */
-.overlay {
-  z-index: 1;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  width: 900px;
-  padding: 90px 45px 60px 45px;
-  transform: translate(-50%, -50%);
-  background: rgba(163,161,161,0.2);
-  box-shadow: 0 15px 20px rgb(0 0 0 / 20%);
-  border-radius: 5px;
-}
-
-.overlay-content {
-  position: relative;
-  top: 20%;
-  width: 100%;
-  text-align: center;
-  margin-top: 30px;
-  height : 35vw;
-}
-
-input[type="text"] {
-    margin: 0 0 0 30em;												
-}
-
-input[type="password"] {
-	margin: 0 0 0 30em;
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 60px;
-  color: #222121;
-  display: block;
-  transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
- color: #0e5a11;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
-}
-
-input.button.fit {
-    padding: 0 0.5em 0 0.5em;
-}
-<%-- 로그인 창 간격 --%>
-.input-box {
-  position: relative;
-  margin: 2vw 0 2vw 3.5vw;
-  
-}
-
-.input-box input {
-  border-style: none;
-  background: transparent;
-  border-bottom: 1px solid #222121;
-  width: 100%;
-  position: relative;
-  outline: none;
-  padding: 10px 0;
-  color: rgb(15, 15, 15);
-  font-size: 18px;
-  margin-bottom: 30px;
-}
-
-.input-box label {
-  color: rgb(15, 15, 15);
-  position: absolute;
-  padding: 10px 0;
-  top: 0;
-  left: 25vw;
-  pointer-events: none;
-  transition: 0.5s;
-}
-
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-  color: #2a6b36;
-  font-size: 15px;
-  top: -20px;
-  transition: 0.3s;
-}
-
-.overlay input[type="submit"] {
-  background: transparent;
-  color: rgb(15, 15, 15);
-  border-spacing: none;
-  border: 1px solid rgb(15, 15, 15);
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 3px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.overlay input[type="submit"]:hover {
-  border: 1px solid rgb(75, 151, 104);
-  transition: 0.3s;
-}
-
-label.loginip {
-    font-size: larger;
-}
-
-form#loginc {
-    margin: 6vw;
-}
-
-input.loginbu {
-    margin: 0 5vw 0 0;
-}
-
-input#joinbut {
-  background: transparent;
-  color: rgb(15, 15, 15);
-  border-spacing: none;
-  border: 1px solid rgb(15, 15, 15);
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 3px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  transform: translate(120%, -113%);
-}
-<%-- 맨 위 박스  --%>
-#flip {
-  padding: 5px;
-  text-align: center;
-  background-color: #e5eecc;
-  background-color: hsla(120, 30%, 70%, 0.3);
-  border: solid 1px #d2e0d2;
-}
-<%-- 상단 로그인 버튼 위치 설정 --%>
-.changel{
-	margin: 3vw 0 0 85vw;
-}
-
-img#ghkrtjd {
+h2#join_title {
     position: relative;
-    top: 0.2vw;
+    bottom: 30px;
 }
 
-td.diarymenu {
-    border-bottom: groove;
-    border-left: groove;
-    border-right: groove;
-    border: solid 5px #608857;
-}
-
-div#content {
-    margin: 30px 0 0 0;
-}
-
-a#logintext {
-    position: relative;
-    top: 5vw;
-}
-
-/* 아이디 입력 */
 .form-group {
-	margin-bottom : 15px;
+    position: relative;
+    top: 70px;
 }
 
-label {
-	display: inline-block;
-    max-width: 100%;
-    margin-bottom: 5px;
+label.join_label {
+	margin: 0 400px 0 0;
+}
+
+input.form-control {
+    position: relative;
+    left: 450px;
+    bottom: 25px;
+}
+
+/*  회원가입 입력 버튼 */
+input#join_submit {
+    width: 120px;
     position : relative;
-    right : 550px;
-    font-weight: bold;
-}
-
-.form-control {
-    display: block;
-    width: 40%;
-    height: 35px;
-    padding: 6px 12px;
-    position : absolute;
-    right : 20px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
-    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
-    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.btn-lg, .btn-group-lg>.btn {
-    padding: 10px 16px;
-    font-size: 18px;
-    line-height: 1.3333333;
-    border-radius: 2px;
-}
-
-/*  로그인 입력 버튼 */
-input#login_submit {
-    width: 100px;
-    position : relative;
-    left : 340px;
+    left: 470px;
+    top: 50px;
+    background-color: white;
+    color: black;
 }
 
