--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -1,54 +1,106 @@
 
 .image_box {
-	background: gainsboro;
     box-sizing: border-box;
     width: 410px;
-    height: 350px;
+    height: 260px;
+}
+button.btn01 {
+    position: relative;
+    bottom: 200px;
+    background-color: white;
+    border-radius: 7px;
+    width: 800px;
+    height: 40px;
+    font-size: x-large;
+    left: 300px;
+    
+}
+.upload_finalbtn {
+    position: relative;
+    top: 50px;
 }
 
-.image_box2 {
-	background: #fdfeeb;
-	border: 1px solid black;
-    box-sizing: border-box;
-    width: 500px;
-    height: 300px;
-}
-
-.image_box3 {
-	background: #fdfeeb;
-	border: 1px solid black;
-    box-sizing: border-box;
-    width: 410px;
-    height: 100px;
+input#btnUpload {
+    width: 400px;
+    background: white;
+    border-style: inset;
+    border-color: yellowgreen;
+    text-shadow: 0 0 black;
+    height: 40px;
+    font-size: x-large;
+    position: relative;
+    right: 400px;
+	top: 49px;    
 }
 
 input[type="file"] {
   display: block;
 }
-.imageThumb {
- 	max-height: 400px;
-    border: 2px solid;
-    padding: 1px;
-    cursor: pointer;
-}
-.pip {
-  display: inline-block;
-  margin: 10px 10px 0 0;
-}
-.remove {
-  display: block;
-  background: #444;
-  border: 1px solid black;
-  color: white;
-  text-align: center;
-  cursor: pointer;
-  width: 50%;
-}
-.remove:hover {
-  background: white;
-  color: black;
+
+img#upload_image {
+    width: 100px;
+    position: relative;
+    top: 90px;
+    right: 485px;
+    z-index:1;
 }
 
- .dellink{
-    display: none;
-  }
+input#fileNm {
+    visibility: hidden;
+}
+
+img#imgArea {
+    position: relative;
+    right: 400px;
+    bottom: 100px;
+}
+
+td#info1 {
+    width: 360px;
+}
+
+ul.info_list{
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 1px solid #efefef;
+    font-size: 12px;
+    cursor: pointer;
+    width: 800px;
+    list-style-type: none;
+    font-size: large;
+    position: relative;
+    bottom: 200px;
+    left: 300px;
+}
+
+ul.mylist li:before{
+    content: ">";
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0px 5px 6px 0px;
+}
+
+ul.mylist li {
+    -webkit-transition: background-color 0.3s linear;
+    -moz-transition: background-color 0.3s linear;
+    -ms-transition: background-color 0.3s linear;
+    -o-transition: background-color 0.3s linear;
+    transition: background-color 0.3s linear;
+}
+  
+ul.info_list li:hover {
+    background-color: #f6f6f6;
+}
+
+button.upload_lastbtn {
+    background-color: white;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 7px 10px;
+}
+
+h2#upload_title {
+    position: relative;
+    bottom: 60px;
+}
+
