메인 이미지 슬라이드

--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -45,6 +45,10 @@ img#upload_image {
     z-index:1;
 }
 
+img#upload_image:visited {
+	visibility: hidden;
+}
+
 input#fileNm {
     visibility: hidden;
 }
