--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 h2#join_title {
     position: relative;
     bottom: 30px;
@@ -15,7 +14,7 @@ label.join_label {
 
 input.form-control {
     position: relative;
-    left: 450px;
+    left: 40px;
     bottom: 25px;
 }
 
@@ -23,13 +22,13 @@ input.form-control {
 input#join_submit {
     width: 120px;
     position : relative;
-    left: 470px;
     top: 50px;
+    left: 1px;
     background-color: white;
     color: black;
+    border-color: yellowgreen;
 }
 
-=======
 /* 오버레이 창 */
 .overlay {
   z-index: 1;
@@ -75,4 +74,18 @@ input#join_submit {
     position: relative;
     left: 43%;
 }
->>>>>>> e7e70dc5e3f698403b0a9eea0a2dbcc7eb25ef8a
+
+form#join_form {
+    position: relative;
+    right: 183px;
+}
+
+input#join_input1 {
+    position: relative;
+    left: 460px;
+}
+
+input#join_input2 {
+    position: relative;
+    left: 460px;
+}
