--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -185,12 +185,12 @@ a:hover, a:active, a:focus {
   transition: all .3s;
 }
 #inner.active {
-  background-color: #d5d5d5;
+  background-color: #ffffff;
   height: 600px;
   left: 50%;
   position: absolute;
-  top: 430px;
-  width: 600px;
+  top: 520px;
+  width: 630px;
   transform: translate(-50%, -50%);
   transition: all .3s;
   display: block;
@@ -202,16 +202,20 @@ input.form-control {
     width: 300px;
 }
 h2#main_login_title {
-	margin: 50px 0 0 230px;
+	margin: 50px 0 0 245px;
 }
 input#login_submit {
     width: 80px;
-    margin: 80px 0 0 230px;
+    margin: 80px 0 0 254px;
+    background-color: white;
+    color: black;
+    border-style: solid;
+    border-color: yellowgreen;
 }
 .login_input {
     position: relative;
     top: 80px;
-    left: 130px;
+    left: 151px;
 }
 
 /* /헤더 로그인 회원가입 */
@@ -300,13 +304,11 @@ input#login_submit {
     align-items: center;
     position: relative;
     text-align: center;
-    padding-bottom: 40px;
+    padding-top: 40px;
 }
 
 div#home_contents {
-    padding: 60px;
-    position: relative;
-    bottom: 60px;
+    padding: 220px;
 }
 
 /* 사진 업로드 버튼 */
@@ -331,9 +333,43 @@ button#picture_upload_btn {
     position: relative;
     text-align: center;
     top: 30px;
+    right: 20px;
+    width: 150px;
+    font-family: 'DOSMyungjo';
 }
 
 button#picture_upload_btn:hover {
+  background: #f3fcf1;
+  text-decoration: none;
+}
+
+/* 질병 진단 버튼 */
+button#picture_sick_upload_btn {
+    background: white;
+    -webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	-webkit-box-shadow: 0px 1px 3px #666666;
+	-moz-box-shadow: 0px 1px 3px #666666;
+	box-shadow: 0px 1px 3px #666666;
+	font-family: Arial;
+	color: #000000;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #000000 2px;
+	text-decoration: none;
+	-webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    top: 30px;
+    width: 150px;
+    left: 10px;
+}
+
+button#picture_sick_upload_btn:hover {
   background: #f3fcf1;
   text-decoration: none;
 }
@@ -372,17 +408,26 @@ hr#main_hr {
 
 /* 메인 서비스소개 높이 */
 .target-section.section1.aos-init.active.aos-animate {
-    height: 590px;
+    height: 866px;
 }
 
 /* 메인 서비스소개 위치 */
 div#main_introduce {
-    padding: 120px 0;
+    padding: 240px 0;
     
+}
+
+.col-xs-12.col-md-4 {
+    position: relative;
+    top: 10px;
 }
 
 b#home_h {
     color: #6ca001;
+}
+
+h2.text-center {
+    letter-spacing: 3px;
 }
 
 /*---------------------------------------
@@ -412,51 +457,66 @@ h1#main_plant_title {
 /* 도감열람 버튼*/
 input#main_plant_imageopen {
     position: relative;
-    top: 100px;
-    left: 100px;
+    top: 230px;
+    right: 150px;
     background: none;
     border-style: solid;
     border-color: yellowgreen;
-    width: 380px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
+  	-moz-border-radius: 100px 0px;
+  	-webkit-border-radius: 100px 0px;
+  	border-radius: 100px 0px;
+  	font-weight: 600;
+
 }
 
 span#main_image_span1 {
     display: inline-block;
-    width: 630px;
-    height: 970px;
+    width: 300px;
+    height: 800px;
     background-color: white;
-    position: relative;
-    left: 150px;
-}
-span#main_image_span2 {
-    display: inline-block;
-    width: 1500px;
-    height: 970px;
-    background-color: whitesmoke;
-    position: relative;
-    left: 400px;
-    bottom: 970px;
+    right: 80px;
+    border-style: solid;
+    border-color: #efecec;
+    border-left: none;
+    border-top: none;
+    border-bottom: none;
 }
 
+
+/* 
 img.main_plant_image_list {
     width: 400px;
     position: relative;
-    top: 180px;
     left: 100px;
-    
-}
+} */
 
 li.main_plant_li {
     list-style-type: none;
 }
 
-h2#main_plant_title {
+/* 도감 타이틀*/
+
+h2#main_plant_title1 {
     width: 500px;
     position: relative;
-    top: 50px;
-    left: 200px;
+    top: 180px;
+    left: 30px;
+    font-size: revert;
 }
+
+h2#main_plant_title2 {
+    width: 500px;
+    position: relative;
+    top: 180px;
+    right: 150px;
+}
+
+section.target-section.section2.aos-init.aos-animate.active {
+    height: 800px;
+}
+
 
 /*---------------------------------------
    Footer section              
@@ -464,8 +524,7 @@ h2#main_plant_title {
 
 footer {
     border-top: 1px solid #f0f0f0;
-    padding: 100px 0px;
-    position: relative;
+    padding: 50px 0px;
 }
 
 footer .col-md-3 .fa {
@@ -551,14 +610,6 @@ footer .footer-copyright {
     text-align: center;
   }
 
-  #about .col-md-8 img {
-    padding-right: 0px;
-  }
-
-  #blog-single-post .blog-post-title h2 {
-    font-size: 29px;
-    line-height: 40px;
-  }
 
   footer {
     text-align: center;
