--- a/src/main/webapp/resources/css/global.css
+++ b/src/main/webapp/resources/css/global.css
@@ -42,14 +42,23 @@ blockquote,q { quotes:"" ""; }
 }
 
 
-#frame {
-	position:absolute;
-	z-index:0;
-	width:739px;
-	height:341px;
-	bottom:500px;
-	left:-80px;
+img#frame {
+	position: absolute;
+    z-index: 0;
+    width: 700px;
+    height: 363px;
 }
+
+img.dictPicture{
+	position: relative;
+    width: 270px;
+    height: 290px;
+    object-fit: cover;
+    left: 225px;
+    bottom: -18px;
+}
+
+
 
 /*
 	Slideshow
@@ -57,8 +66,6 @@ blockquote,q { quotes:"" ""; }
 
 #slides {
 	position:absolute;
-	bottom: -27px;
-	left:80px;
 	z-index:100;
 }
 
@@ -70,7 +77,7 @@ blockquote,q { quotes:"" ""; }
 */
 
 .slides_container {
-	width:500px;
+	width:850px;
 	overflow:hidden;
 	position:relative;
 	display:none;
@@ -85,7 +92,7 @@ blockquote,q { quotes:"" ""; }
 */
 
 .slides_container div.slide {
-	width:500px;
+	width: 700px;
 	height:350px;
 	display:block;
 }
@@ -98,7 +105,7 @@ blockquote,q { quotes:"" ""; }
 #slides .next,#slides .prev {
 	position:absolute;
 	bottom: 220px;
-	right: 500px;
+	right: 880px;
 	width:60px;
 	height:50px;
 	display:block;
@@ -106,14 +113,23 @@ blockquote,q { quotes:"" ""; }
 }
 
 #slides .next {
-	left:500px;
+	left: 680px;
 }
 
-/*
-	Pagination
-*/
-/* 
-.pagination {
+
+#prevImg{
+	width: 60px;
+    height: 50px;
+}
+
+#nextImg{
+	width: 60px;
+    height: 50px;
+}
+
+
+/*Pagination*/
+/* .pagination {
 	margin:26px auto 0;
 	width:100px;
 }
@@ -139,25 +155,26 @@ blockquote,q { quotes:"" ""; }
 	background-position:0 -12px;
 }
  */
+
 /*
 	Caption
 */
 
 .caption {
-	z-index:500;
-	position:absolute;
-	bottom:-35px;
-	left:0;
-	height:30px;
-	padding:5px 20px 0 20px;
-	background:#000;
-	background:rgba(0,0,0,.5);
-	width:540px;
-	font-size:1.3em;
-	line-height:1.33;
-	color:#fff;
-	border-top:1px solid #000;
-	text-shadow:none;
+    z-index: 500;
+    position: relative;
+    bottom: -35px;
+    left: 80px;
+    height: 30px;
+    padding: 0 20px 0px 20px;
+    background: #fff;
+    background: rgb(255 255 255);
+    width: 540px;
+    font-size: 1.3em;
+    line-height: 1.33;
+    color: #fff;
+    border-top: 1px solid #000;
+    text-shadow: none;
 }
 
 /*
@@ -190,3 +207,4 @@ a:hover,a:active {
 	color:#599100;
 	text-decoration:underline;
 }
+
