질병진단 그래프

--- a/src/main/webapp/resources/css/disease_upload.css
+++ b/src/main/webapp/resources/css/disease_upload.css
@@ -20,12 +20,12 @@ button#btn_dtail {
 
 div#image_box2_1 {
     position: absolute;
-    bottom: 243px;
-    left: 252px;
+    bottom: -13px;
+    left: 130px;
 }
 
 
-p#ment {
+p.ment {
     color: black;
     font-size: xx-large;
     font-weight: bolder;
