로고랑 푸터 수정

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -545,6 +545,13 @@ footer .footer-copyright {
   padding-top: 16px;
 }
 
+p#footer_ment {
+    width: 400px;
+}
+
+div#footer_logo {
+    width: 200px;
+}
 
 /*---------------------------------------
    Social icon             
