--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -41,7 +41,7 @@ h4 {
 }
 
 p {
-    color: #777;
+    color: #000;
     font-size: 15px;
     font-weight: 300;
     line-height: 26px;
@@ -430,6 +430,58 @@ h2.text-center {
     letter-spacing: 3px;
 }
 
+p#main_info_ment2 {
+    width: 500px;
+    position: relative;
+    right: 50px;
+}
+
+div#main_info_box1 {
+    position: relative;
+    right: 40px;
+}
+.col-xs-12.col-md-12.section-container-spacer {
+    position: relative;
+    bottom: 50px;
+}
+
+.section2.active {
+    background: #ffffff;
+    height: 759px;
+}
+
+
+/* 나의초록이보기 버튼 */
+input#main_plant_imageopen {
+	background: white;
+    -webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	-webkit-box-shadow: 0px 1px 3px #666666;
+	-moz-box-shadow: 0px 1px 3px #666666;
+	box-shadow: 0px 1px 3px #666666;
+	font-family: Arial;
+	color: #000000;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #000000 2px;
+	text-decoration: none;
+	-webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    top: 150px;
+    width: 220px;
+    left: 200px;
+    color: #599100;
+}
+input#main_plant_imageopen:hover {
+  background: #f3fcf1;
+  text-decoration: none;
+}
+
 /*---------------------------------------
  	 이미지 슬라이드        
 -----------------------------------------*/
@@ -455,20 +507,6 @@ h1#main_plant_title {
     top: 100px;
 }
 
-span#main_image_span1 {
-    display: inline-block;
-    width: 300px;
-    height: 800px;
-    background-color: white;
-    right: 80px;
-    border-style: solid;
-    border-color: #efecec;
-    border-left: none;
-    border-top: none;
-    border-bottom: none;
-}
-
-
 /* 
 img.main_plant_image_list {
     width: 400px;
@@ -486,8 +524,9 @@ h2#main_plant_title1 {
     width: 500px;
     position: relative;
     top: 180px;
-    left: 200px;
+    left: 40px;
     font-size: revert;
+    font-size: xx-large;
 }
 
 h2#main_plant_title2 {
@@ -529,7 +568,29 @@ footer .footer-copyright {
   padding-top: 16px;
 }
 
+div#footer_logo {
+    width: 200px;
+}
 
+
+p#footer_icon {
+    font-size: xx-large;
+    letter-spacing: 3px;
+}
+
+a#twitter_icon {
+    color: cornflowerblue;
+}
+a#facebook_icon {
+    color: blue;
+}
+a#youtube_icon {
+    color: red;
+}
+
+div#footer_icon_box {
+    padding: 10px;
+}
 /*---------------------------------------
    Social icon             
 -----------------------------------------*/
